--- a/login.html
+++ b/login.html
@@ -21,9 +21,7 @@
       --fundo-suave: #f8f6f0;
     }
 
-    html, body {
-      height: 100%;
-    }
+    html, body { height: 100%; }
     .page-wrapper {
       display: flex;
       flex-direction: column;
@@ -84,9 +82,7 @@
       position: relative;
     }
 
-    .form-group {
-      margin-bottom: 20px;
-    }
+    .form-group { margin-bottom: 20px; }
     .form-group label {
       display: block;
       margin-bottom: 8px;
@@ -150,7 +146,27 @@
     .error { background: #ffebee; color: var(--vermelho); }
     .success { background: #e8f5e9; color: #2e7d32; }
 
-    /* === TOAST MODERNO === */
+    .home-link {
+      display: inline-block;
+      text-align: center;
+      margin: 20px auto;
+      gap: 6px; 
+      font-weight: bold; 
+      padding: 6px 12px; 
+      border: 1px solid var(--cinza-medio); 
+      border-radius: 20px; 
+      cursor: pointer; 
+      text-decoration: none;
+      color: inherit;
+      transition: background 0.2s ease;
+    }
+
+    .home-link:hover {
+      background: var(--laranja);
+      color: var(--branco);
+    }
+
+    /* Toast moderno */
     #toast-container {
       position: fixed;
       top: 20px;
@@ -169,14 +185,8 @@
       animation: slideIn 0.3s ease forwards, fadeOut 0.4s ease 2.6s forwards;
       max-width: 320px;
     }
-    @keyframes slideIn {
-      from { transform: translateX(100%); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
-    @keyframes fadeOut {
-      from { opacity: 1; }
-      to { opacity: 0; }
-    }
+    @keyframes slideIn { from { transform: translateX(100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+    @keyframes fadeOut { from { opacity: 1; } to { opacity: 0; } }
     .toast.success { background: var(--laranja); }
     .toast.error { background: var(--vermelho); }
   </style>
@@ -185,7 +195,7 @@
   <div class="page-wrapper">
     <div class="card">
       <div class="card-inner">
-        <div class="logo">GERA<span> Audiovisual e Comunicação</span></div>
+        <div class="logo" style="text-align:center;">GERA<span> Audiovisual e Comunicação</span></div>
 
         <div class="form-container">
           <!-- LOGIN -->
@@ -232,46 +242,37 @@
 
         <div id="message"></div>
 
-        // Alinhar aqui
-        <a href="https://gera-noticias.vercel.app" class="back-link">← Voltar para o portal</a>
+        <div style="text-align: center; margin: 20px 0;">
+  <a href="https://gera-noticias.vercel.app" class="home-link">Voltar para o Portal</a>
+</div>
+
+
       </div>
     </div>
 
-    <footer>
-      &copy; 2025 GERA Audiovisual e Comunicação. Todos os direitos reservados.
-    </footer>
+    <footer>&copy; 2025 GERA Audiovisual e Comunicação. Todos os direitos reservados.</footer>
   </div>
 
-  <!-- Toast Container -->
   <div id="toast-container"></div>
 
   <script>
-    // Função para mostrar toast moderno
+    const API_BASE = 'https://backend-gera-lrgo.onrender.com';
+
     function showToast(message, type = 'success') {
       const container = document.getElementById('toast-container');
       const toast = document.createElement('div');
       toast.className = `toast ${type}`;
       toast.textContent = message;
       container.appendChild(toast);
-
-      setTimeout(() => {
-        if (toast.parentNode) {
-          toast.parentNode.removeChild(toast);
-        }
-      }, 3000);
+      setTimeout(() => toast.remove(), 3000);
     }
 
-    // Alternar formulários
-    function showForm(formId) {
+    function showForm(id) {
       document.querySelectorAll('.form').forEach(f => f.classList.remove('active'));
-      document.getElementById(formId).classList.add('active');
+      document.getElementById(id).classList.add('active');
       document.getElementById('message').innerHTML = '';
     }
 
-    // Alinhar aqui
-    const API_BASE = 'https://backend-gera.onrender.com';
-
-    // Login com e-mail/senha
     document.getElementById('login-submit').addEventListener('click', async (e) => {
       e.preventDefault();
       const msg = document.getElementById('message');
@@ -279,30 +280,25 @@
         email: document.getElementById('login-email').value,
         password: document.getElementById('login-password').value
       };
-
       try {
         const res = await fetch(`${API_BASE}/api/login`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
-
-        const result = await res.json();
+        const result = await res.json().catch(() => ({}));
         if (res.ok && result.success) {
-          if (result.isAdmin) {
-            window.location.href = 'https://gera-painel-admin.vercel.app'; // Alinhar aqui
-          } else {
-            window.location.href = 'https://gera-noticias.vercel.app'; // Alinhar aqui
-          }
+          window.location.href = result.isAdmin
+            ? 'https://gera-painel-admin.vercel.app'
+            : 'https://gera-noticias.vercel.app';
         } else {
-          msg.innerHTML = `<div class="message error">${result.error || 'Credenciais inválidas ou e-mail não verificado.'}</div>`;
+          msg.innerHTML = `<div class="message error">${result.error || 'Credenciais inválidas.'}</div>`;
         }
-      } catch (err) {
+      } catch {
         msg.innerHTML = '<div class="message error">Erro de conexão com o servidor.</div>';
       }
     });
 
-    // Cadastro com e-mail
     document.getElementById('register-submit').addEventListener('click', async (e) => {
       e.preventDefault();
       const name = document.getElementById('register-name').value.trim();
@@ -312,22 +308,10 @@
       const pass2 = document.getElementById('register-confirm').value;
       const msg = document.getElementById('message');
 
-      if (!name) {
-        msg.innerHTML = '<div class="message error">Por favor, informe seu nome completo.</div>';
-        return;
-      }
-      if (pass1 !== pass2) {
-        msg.innerHTML = '<div class="message error">As senhas não coincidem.</div>';
-        return;
-      }
-      if (pass1.length < 6) {
-        msg.innerHTML = '<div class="message error">A senha deve ter pelo menos 6 caracteres.</div>';
-        return;
-      }
-      if (!age || age < 13 || age > 120) {
-        msg.innerHTML = '<div class="message error">Idade inválida. Deve estar entre 13 e 120 anos.</div>';
-        return;
-      }
+      if (!name) return msg.innerHTML = '<div class="message error">Informe seu nome completo.</div>';
+      if (pass1 !== pass2) return msg.innerHTML = '<div class="message error">As senhas não coincidem.</div>';
+      if (pass1.length < 6) return msg.innerHTML = '<div class="message error">Senha muito curta.</div>';
+      if (!age || age < 13 || age > 120) return msg.innerHTML = '<div class="message error">Idade inválida.</div>';
 
       try {
         const res = await fetch(`${API_BASE}/api/register`, {
@@ -335,145 +319,60 @@
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email, age, password: pass1 })
         });
-        const result = await res.json();
+        const result = await res.json().catch(() => ({}));
         if (res.ok && result.success) {
-          const codeRes = await fetch(`${API_BASE}/api/send-verification-code`, {
+          await fetch(`${API_BASE}/api/send-verification-code`, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email })
           });
-          if (codeRes.ok) {
-            showToast('Código de verificação enviado para seu e-mail!', 'success');
-          }
+          showToast('Código de verificação enviado!', 'success');
           showForm('login-form');
         } else {
           msg.innerHTML = `<div class="message error">${result.error || 'Erro ao cadastrar.'}</div>`;
         }
-      } catch (err) {
+      } catch {
         msg.innerHTML = '<div class="message error">Erro de conexão.</div>';
       }
     });
 
-    // Esqueci a senha — com modal moderno
     document.getElementById('forgot-password-link').addEventListener('click', async (e) => {
       e.preventDefault();
-
       const modal = document.createElement('div');
-      modal.style.cssText = `
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 9999;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      `;
-
-      const modalContent = document.createElement('div');
-      modalContent.style.cssText = `
-        background: var(--branco);
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-        width: 90%;
-        max-width: 400px;
-        text-align: center;
-      `;
-
-      modalContent.innerHTML = `
-        <h3 style="color: var(--preto); margin-bottom: 16px; font-weight: bold;">Recuperar Senha</h3>
-        <p style="color: #666; margin-bottom: 20px; font-size: 14px;">
-          Digite seu e-mail cadastrado para receber o código de recuperação.
-        </p>
-        <input 
-          type="email" 
-          id="reset-email" 
-          placeholder="seu@email.com"
-          style="
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 16px;
-          "
-          required
-        >
-        <div style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
-          <button 
-            id="reset-send-btn" 
-            style="
-              padding: 10px 20px;
-              background: var(--laranja);
-              color: var(--branco);
-              border: none;
-              border-radius: 6px;
-              font-weight: bold;
-              cursor: pointer;
-              transition: background 0.3s;
-            "
-          >Enviar Código</button>
-          <button 
-            id="reset-cancel-btn" 
-            style="
-              padding: 10px 20px;
-              background: #f0f0f0;
-              color: #333;
-              border: none;
-              border-radius: 6px;
-              font-weight: bold;
-              cursor: pointer;
-              transition: background 0.3s;
-            "
-          >Cancelar</button>
-        </div>
-      `;
-
-      modal.appendChild(modalContent);
+      modal.style.cssText = `position:fixed;inset:0;background:rgba(0,0,0,0.5);display:flex;justify-content:center;align-items:center;z-index:9999;`;
+      modal.innerHTML = `
+        <div style="background:var(--branco);padding:30px;border-radius:12px;max-width:400px;width:90%;text-align:center;">
+          <h3 style="color:var(--preto);margin-bottom:16px;">Recuperar Senha</h3>
+          <p style="color:#666;margin-bottom:20px;font-size:14px;">Digite seu e-mail cadastrado:</p>
+          <input id="reset-email" type="email" placeholder="seu@email.com"
+            style="width:100%;padding:12px;border:1px solid #ddd;border-radius:6px;font-size:16px;">
+          <div style="display:flex;gap:10px;justify-content:center;margin-top:20px;">
+            <button id="reset-send-btn" style="padding:10px 20px;background:var(--laranja);color:white;border:none;border-radius:6px;font-weight:bold;">Enviar</button>
+            <button id="reset-cancel-btn" style="padding:10px 20px;background:#f0f0f0;border:none;border-radius:6px;font-weight:bold;">Cancelar</button>
+          </div>
+        </div>`;
       document.body.appendChild(modal);
 
-      document.getElementById('reset-send-btn').addEventListener('click', async () => {
+      document.getElementById('reset-send-btn').onclick = async () => {
         const email = document.getElementById('reset-email').value.trim();
-        if (!email) {
-          showToast('Por favor, insira um e-mail válido.', 'error');
-          return;
-        }
-
+        if (!email) return showToast('Insira um e-mail válido.', 'error');
         try {
           const res = await fetch(`${API_BASE}/api/send-password-reset`, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email })
           });
-
-          if (res.ok) {
-            showToast('Código de recuperação enviado para seu e-mail!', 'success');
-          } else {
-            showToast('E-mail não encontrado.', 'error');
-          }
-        } catch (err) {
-          showToast('Erro de conexão com o servidor.', 'error');
+          res.ok ? showToast('Código enviado!', 'success') : showToast('E-mail não encontrado.', 'error');
+        } catch {
+          showToast('Erro de conexão.', 'error');
         }
-
-        document.body.removeChild(modal);
-      });
-
-      document.getElementById('reset-cancel-btn').addEventListener('click', () => {
-        document.body.removeChild(modal);
-      });
+        modal.remove();
+      };
+      document.getElementById('reset-cancel-btn').onclick = () => modal.remove();
     });
 
-    // Alternar entre login e cadastro
-    document.getElementById('show-register').addEventListener('click', (e) => {
-      e.preventDefault(); showForm('register-form');
-    });
-    document.getElementById('show-login').addEventListener('click', (e) => {
-      e.preventDefault(); showForm('login-form');
-    });
+    document.getElementById('show-register').addEventListener('click', e => { e.preventDefault(); showForm('register-form'); });
+    document.getElementById('show-login').addEventListener('click', e => { e.preventDefault(); showForm('login-form'); });
   </script>
 </body>
 </html>
